<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="tabLayout" type="id" />
    <item name="vp" type="id" />
    <item name="spinnerLeague" type="id" />
    <item name="rv_list_league" type="id" />
    <item name="srl_list_league" type="id" />
    <item name="tvDateMatch" type="id" />
    <item name="imgHomeTeam" type="id" />
    <item name="imgAwayTeam" type="id" />
    <item name="tvHomeTeamName" type="id" />
    <item name="tvAwayTeamName" type="id" />
    <item name="tvHomeTeamScore" type="id" />
    <item name="tvAwayTeamScore" type="id" />
    <item name="middleStrip" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="list_team" type="id" />
    <item name="spinnerLeagueTeam" type="id" />
    <item name="srl_list_team" type="id" />
    <item name="rv_team" type="id" />
    <item name="pb_team" type="id" />
    <item name="iv_player" type="id" />
    <item name="tv_playerName" type="id" />
    <item name="tv_playerPosition" type="id" />
</resources>