<resources>
    <string name="app_name">SoccerScheduleMatch</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_detail_team">DetailTeamActivity</string>
    <string name="title_activity_detail_player">DetailPlayerActivity</string>
</resources>
