...
                        app:layout_constraintEnd_toStartOf="@id/tvRedCard"/>

                    <TextView
                        android:id="@+id/tvRedCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Red Card"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tvAwayRedCard"
...
